--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+localwriterai (0.1.2) jammy; urgency=medium
+
+  * fork sync
+  * fixed debian dependencies
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Fri, 20 Dec 2024 13:31:45 +0100
+
 localwriterai (0.1.1) jammy; urgency=medium
 
   * Added white background to zero-center banner
